# nothingbook

./: Cargo.toml
src/: app.rs  main.rs  note.rs  note_list.rs  storage.rs
src/views/: editor.rs  mod.rs  sidebar.rs
