[package]
name = "notes-app"
version = "0.1.0"
edition = "2024"

[dependencies]
# GPUI 核心框架 - Zed编辑器使用的GPU加速UI框架
gpui = "0.2.2"
# GPUI组件库 - 提供Button、Input、List等预制组件
gpui-component = "0.5.1"
# 资源包 - 包含默认图标等资源
gpui-component-assets = "0.5.1"

# 序列化/反序列化 - 用于JSON数据存储
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理 - 用于记录笔记创建和修改时间
chrono = { version = "0.4", features = ["serde"] }

# UUID生成 - 为每个笔记生成唯一ID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 目录管理 - 获取系统特定的配置目录路径
dirs = "5.0"

# 错误处理 - 更友好的错误类型
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true